[tool.poetry]
name = "athop_transaction_scraper"
version = "0.1.0"
description = ""
authors = ["Paul Oliver <puzza007@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.2"
slackclient = "^2.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
