[project]
name = "athop_transaction_scraper"
version = "0.1.0"
description = "AT HOP transaction scraper with Slack notifications"
authors = [{name = "Paul Oliver", email = "puzza007@gmail.com"}]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "slack-sdk>=3.0.0",
    "selenium>=4.15.0",
]

[dependency-groups]
dev = [
    "black>=24.0.0",
    "mypy>=1.0.0",
    "types-requests>=2.31.0",
]
